--- a/index.html
+++ b/index.html
@@ -372,6 +372,26 @@ In questa sezione dovranno esserci:
                     </div>
                   </div>
                 </section>
+                <!-- 6) Implementa la sezione "Offerta del giorno". Qui avrai:
+
+66% dello spazio dedicato all'immagine del luogo di destinazione
+33% dedicato al nome, date, prezzo e un badge con "best offer" come testo
+
+l'immagine avrà i bordi arrotondati e un'ombra leggera
+per il contenuto: il nome dovrà essere più grande del resto,
+le date dovranno essere formattate con font "monospace",
+il prezzo dovrà essere definito come "lead"
+e il badge sarà scuro -->
+<section class="collapse.show multi-collapse" id="giorno">
+  <div class="container px-0 d-none d-md-block article">
+    <div class="row">
+      <div class="col-12">
+        <h2 class="section-title">Offerta del giorno</h2>
+      </div>
+    </div>
+    <div class="row"></div>
+  </div>
+</section>
               </div>
               <script
                 src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
