--- a/index.html
+++ b/index.html
@@ -489,6 +489,16 @@ Recensioni : nascondi elemento
   </div>
 </section>
 <!-- 11) Crea un footer con le informazioni dell'agenzia e un bottone "Contattaci". -->
+<footer>
+  <div class="container-fluid bg-dark text-center">
+    <button class="rounded bg-transparent text-secondary border border-secondary p-2 mt-4" type="button" data-bs-toggle="modal" data-bs-target="#contattaci">
+      Contattaci
+    </button>
+    <p class="text-white p-4 m-0">
+      &copy 2023 Viaggi S.p.A all right reserved
+    </p>
+  </div>
+</footer>
 
 
               </div>
